start app.js and create style.css

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Neighborhood Map</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <script src="js/lib/knockout-3.4.0.js"></script>
