--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Neighborhood Map</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+  <div id="map"></div>
+  <ul id="place-list" data-bind="foreach: placelist">
+    <div id="place">
+      <li data-bind="text: name"></li>
+    </div>
+  </ul>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&callback=initMap" async defer></script>
+  <script src="js/map.js"></script>
   <script src="js/lib/knockout-3.4.0.js"></script>
   <script src="js/lib/jquery-1.12.3.js"></script>
   <script src="js/app.js"></script>
 </body>
+
 </html>
