--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <input id="pac-input" class="controls" type="text" placeholder="Search Box">
   <div id="map"></div>
   <ul id="place-list" data-bind="foreach: placelist">
     <div id="place">
