--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,12 @@
     <ul class="results"></ul>
   </div>
   <div id="map"></div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places&callback=initMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places"></script>
   <script src="js/lib/knockout-3.4.0.js"></script>
   <script src="js/lib/jquery-1.12.3.js"></script>
+  <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
+  <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
+  <script src="js/map.js"></script>
   <script src="js/app.js"></script>
 </body>
 
