fix ajax request by setting cache: true as parameter
also fix repeating listing issue by clearing listing before running
through loop again

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Neighborhood Map</title>
   <link rel="stylesheet" href="css/style.css">
+  <title>Neighborhood Map</title>
 </head>
 
 <body>
@@ -20,8 +20,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places"></script>
   <script src="js/lib/knockout-3.4.0.js"></script>
   <script src="js/lib/jquery-1.12.3.js"></script>
-  <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
-  <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
+  <script src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
+  <script src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
   <script src="js/map.js"></script>
   <script src="js/app.js"></script>
 </body>
