--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <button type="button" data-bind="click: updateResults">Search</button>
       <input type="text" data-bind="value: Term">
     </form>
-    <ul class="results"></ul>
+    <ul class="results search"></ul>
   </div>
   <div id="map"></div>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places"></script>
