--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
   <title>Neighborhood Map</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div class="search">
     <form data-bind="submit: updateResults">
-      <button type="button" data-bind="click: updateResults">Search</button>
-      <input type="text" data-bind="value: Term">
+      <input type="text" data-bind="value: Term"><br><br>
+      <button type="button" data-bind="click: updateResults">Search with Yelp!</button>
     </form>
-    <ul class="results search"></ul>
+    <ul class="search results"></ul>
   </div>
   <div id="map"></div>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places"></script>
