rearrange/style some things for appearance

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="search">
     <form data-bind="submit: updateResults">
+      <button id="displaybutton" type="button">Toggle Display on Mobile</button><br>
       <input type="text" data-bind="value: Term"><br>
-      <button id="displaybutton" type="button">Toggle Display</button><br>
       <button type="button" data-bind="click: updateResults">Search with Yelp!</button>
     </form>
     <ul class="search results mobile"></ul>
