add functionality to dynamically center map, and make it so that clicking on list link opens in new tab/window

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <form data-bind="submit: updateResults">
       <button id="displaybutton" type="button">Toggle Display on Mobile</button><br>
       <input type="text" data-bind="value: Term"><br>
+      <input type="text" data-bind="value: area"><br>
       <button type="button" data-bind="click: updateResults">Search with Yelp!</button>
     </form>
     <ul class="search results mobile"></ul>
