--- a/src/index.html
+++ b/src/index.html
@@ -9,23 +9,25 @@
 </head>
 
 <body>
-  <div class="search">
+  <nav class="Search">
     <form data-bind="submit: updateResults">
-      <button id="displaybutton" type="button">Toggle Display on Mobile</button><br>
-      <input type="text" data-bind="value: Term"><br>
+      <button class="DisplayButton" type="button">Toggle Display on Mobile</button><br>
+      <input type="text" data-bind="value: term"><br>
       <input type="text" data-bind="value: area"><br>
       <button type="button" data-bind="click: updateResults">Search with Yelp!</button>
     </form>
-    <ul class="search results mobile"></ul>
-  </div>
-  <div id="map"></div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places"></script>
+    <ul class="Search Results Mobile" data-bind="foreach: ajaxResults">
+      <li id="list"><a data-bind="attr: { href: url }, text: name" target="_blank"></a><img data-bind="attr: {src: rating_img_url_small}"></li><br>
+    </ul>
+  </nav>
+  <main class="Map" id="map"></main>
   <script src="js/lib/knockout-3.4.0.js"></script>
   <script src="js/lib/jquery-1.12.3.js"></script>
-  <script src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
-  <script src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
   <script src="js/map.js"></script>
   <script src="js/app.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places&callback=googleSuccess"></script>
+  <script src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
+  <script src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
 </body>
 
 </html>
