--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
   <script src="js/lib/jquery-1.12.3.js"></script>
   <script src="js/map.js"></script>
   <script src="js/app.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places&callback=googleSuccess"></script>
-  <script src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places&callback=googleSuccess" onerror="googleError()"></script>
+  <script src="http://oauth.googlecode.com/svn/code/javascript/oauth.js" onerror="authError()"></script>
   <script src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
 </body>
 
