--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,12 @@
   <script src="js/map.js"></script>
   <script src="js/app.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBecyRkkN-0rCzps3UmZx4NKEr3g4_5tfs&libraries=places&callback=googleSuccess" onerror="googleError()"></script>
+  <script src="js/lib/oauth.js"></script>
+  <script src="js/lib/sha1.js"></script>
+  <!-- These suddenly started returning a 404 error.
   <script src="http://oauth.googlecode.com/svn/code/javascript/oauth.js" onerror="authError()"></script>
   <script src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
+  -->
 </body>
 
 </html>
