--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
     <ul class="Search Results Mobile" data-bind="foreach: ajaxResults">
       <li id="list"><a data-bind="attr: { href: url }, text: name" target="_blank"></a><img data-bind="attr: {src: rating_img_url_small}"></li><br>
     </ul>
+    <!-- ko if: emptyResults -->
+      <br><li class="Search Results Mobile"><h3>Oh no! We can't seem to find anything for <span data-bind="text: term"></span> in <span data-bind="text: area"></span>.</h3><p>Try something else.</p></li>'
+    <!-- /ko -->
   </nav>
   <main class="Map" id="map"></main>
   <script src="js/lib/knockout-3.4.0.js"></script>
